# entrenar

./: .clippy.toml  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  GOLDEN_TRACE_INTEGRATION_SUMMARY.md  LICENSE  Makefile  PROJECT_STATUS.md  README.md  RELEASE_v0.1.0.md  deny.toml  docker-compose-jaeger.yml  example_model.json  example_model.yaml  jaeger-sampling.json  pmat.toml  renacer.toml  roadmap.yaml
.github/workflows/: ci.yml
.pmat/: tdg-baseline.json
.pmat-metrics/: commit-062f235-meta.json  commit-0f05c2b-meta.json  commit-1b7960f-meta.json  commit-1b86e20-meta.json  commit-4b47ccf-meta.json  commit-74549f5-meta.json  commit-805cc6a-meta.json  commit-ab50c0d-meta.json  commit-b56f4b0-meta.json  commit-cef2d2b-meta.json  commit-e3ac334-meta.json
benches/: monitor_bench.rs
book/: BOOK_UPDATE_SUMMARY.md  QUALITY_CHECKLIST.md  book.toml
book/book/: 404.html  index.html  introduction.html  print.html  searchindex.js  searchindex.json  toc.html  toc.js
book/book/advanced/: advanced-quantization.html  citl.html  custom-backward.html  custom-lora.html  distributed-training.html  model-parallelism.html  new-optimizers.html
book/book/api-reference/: autograd-ops.html  configuration.html  error-handling.html  lora-api.html  optimizer-api.html  qlora-api.html  tensor-api.html
book/book/appendix/: benchmark-results.html  changelog.html  faq.html  glossary.html  mathematical-notation.html  migration-guide.html  references.html
book/book/architecture/: design-philosophy.html  memory-management.html  module-organization.html  overview.html  type-system.html
book/book/autograd/: activations.html  attention.html  backward-pass.html  finite-difference.html  gradient-computation.html  layer-norm.html  matmul.html  tape-based-graphs.html  tensor-operations.html  what-is-autograd.html
book/book/best-practices/: debugging-training.html  gradient-stability.html  lora-configuration.html  lr-tuning.html  memory-optimization.html  optimizer-selection.html  profiling.html
book/book/cli/: benchmark.html  command-line-interface.html  overview.html  research.html
book/book/dashboard/: dashboard-source.html  overview.html  wasm.html
book/book/declarative/: model-builders.html  optimizer-builders.html  overview.html  qa-process.html  schema.html  train-from-yaml.html  yaml-config.html  yaml-examples.html  yaml-mode.html
book/book/development/: benchmarking.html  clippy-linting.html  code-coverage.html  continuous-integration.html  contributing.html  extreme-tdd.html  gradient-checking.html  mutation-testing.html  pmat-workflow.html  pre-commit-hooks.html  property-based-tests.html  quality-gates.html  testing-strategy.html  unit-tests.html
book/book/distillation/: loss-functions.html  multi-teacher.html  progressive.html  student-teacher.html  temperature-kl.html  what-is-distillation.html
book/book/ecosystem/: batuta.html  ruchy.html  (+2 more)
book/src/: SUMMARY.md  introduction.md
crates/entrenar-wasm/: Cargo.toml
crates/entrenar-wasm/src/: lib.rs
docs/: llama-implementation-summary.md  llama-integration-complete.md  phase3-progress.md  phase4-progress.md
docs/book/: model-formats.md
docs/reviews/: monitoring-spec-review.md
docs/roadmaps/: cli-implementation-epic.yaml  roadmap.yaml
docs/specifications/: entrenar-spec.md  experiment-tracking-spec.md  llama-ideas-inclusion-spec.md  model-eval-framework-spec.md  paiml-sai-vision-sync.md  training-monitoring-spec-realtime-and-diagnostics.md
docs/work-items/: experiment-tracking-epic.yaml
examples/: cli_audit.rs  cli_bench.rs  cli_inspect.rs  cli_monitor.rs  config.yaml  distillation.rs  explainability.rs  merge_models.rs  model_io.rs  research.rs  sovereign.rs  train_from_yaml.rs  training_loop.rs
examples/llama2/: README.md  architecture.rs  finetune_lora.rs  finetune_qlora.rs  memory_benchmarks.rs  train.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: lora_config.rs  parameter_calc.rs  tensor_ops.rs
golden_traces/: ANALYSIS.md  llama2_finetune_lora.json  llama2_finetune_lora_summary.txt  model_io.json  model_io_summary.txt  training_loop.json  training_loop_source.json  training_loop_summary.txt
pkg/: entrenar_monitor.d.ts
proptest-regressions/autograd/: tests.txt
proptest-regressions/config/: infer.txt
proptest-regressions/monitor/: tests.txt
proptest-regressions/optim/: convergence_tests.txt
proptest-regressions/quant/: benchmarks.txt
scripts/: analyze_training.sh  capture_golden_traces.sh
src/: error.rs  lib.rs  main.rs  run.rs
src/autograd/: backward.rs  context.rs  mod.rs  ops.rs  tensor.rs  tests.rs
src/citl/: mod.rs  pattern_store.rs  tests.rs  trainer.rs
src/config/: builder.rs  cli.rs  infer.rs  mod.rs  property_tests.rs  schema.rs  tests.rs  train.rs  validate.rs
src/dashboard/: wasm.rs
src/distill/: loss.rs  mod.rs  progressive.rs  tests.rs
src/ecosystem/: batuta.rs  mod.rs  realizar.rs  ruchy.rs
src/generative/: code_gan.rs
src/hf_pipeline/: distillation.rs  fetcher.rs  loader.rs
src/integrity/: lineage.rs
src/io/: format.rs  load.rs  mod.rs  model.rs  save.rs  tests.rs
src/lora/: config.rs  layer.rs  mod.rs
src/merge/: commutativity.rs  dare.rs  ensemble.rs  mod.rs  slerp.rs  tests.rs  ties.rs
src/monitor/: andon.rs  dashboard.rs  drift.rs  export.rs  lineage.rs  mod.rs  report.rs  storage.rs  tests.rs  wasm.rs
src/optim/: adam.rs  adamw.rs  convergence_tests.rs  hpo.rs  mod.rs  optimizer.rs  scheduler.rs  sgd.rs  simd.rs
src/quant/: benchmarks.rs  calibration.rs  error_analysis.rs  fake_quantize.rs  gguf_quant.rs  granularity.rs  mod.rs
src/server/: api.rs  state.rs
src/sovereign/: registry.rs
src/storage/: memory.rs  mod.rs  trueno.rs
src/train/: callback.rs  config.rs  curriculum.rs  loss.rs  metrics.rs  mod.rs  trainer.rs
src/yaml_mode/: manifest.rs  mod.rs  templates.rs  tests.rs  validation.rs
tests/: autograd_integration.rs  chaos_llama.rs  gradient_llama.rs  mutation_resistant_llama.rs  property_curriculum.rs  property_llama.proptest-regressions  property_llama.rs  run_tracing_test.rs  storage_test.rs
wasm-pkg/: demo.js
(+246 files in other folders)
