[package]
name = "entrenar"
version = "0.2.0"
edition = "2021"
authors = ["PAIML <hello@paiml.com>"]
description = "Training & Optimization library with autograd, LoRA, quantization, and model merging"
repository = "https://github.com/paiml/entrenar"
license = "MIT"
keywords = ["machine-learning", "neural-networks", "autograd", "lora", "quantization"]
categories = ["science", "mathematics"]

[features]
default = []
gguf = []  # Placeholder for future GGUF support via Realizar
monitor = ["trueno-db", "chrono"]  # Training monitoring with persistence

[dependencies]
# Core PAIML stack
ndarray = "0.16"
trueno = "0.7.3"  # SIMD-accelerated compute
aprender = "0.12.0"  # ML interpret module for explainability
trueno-db = { version = "0.3", optional = true }  # Time-series storage
chrono = { version = "0.4", optional = true }  # Timestamps
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
toml = "0.8"
thiserror = "2.0"
rand = "0.9"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
proptest = "1.4"
approx = "0.5"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0

[[bin]]
name = "entrenar"
path = "src/main.rs"
required-features = []

[[example]]
name = "llama2-train"
path = "examples/llama2/train.rs"
required-features = []

[[example]]
name = "llama2-finetune-lora"
path = "examples/llama2/finetune_lora.rs"
required-features = []

[[example]]
name = "llama2-finetune-qlora"
path = "examples/llama2/finetune_qlora.rs"
required-features = []

[[example]]
name = "llama2-memory-benchmarks"
path = "examples/llama2/memory_benchmarks.rs"
required-features = []

[[example]]
name = "merge_models"
path = "examples/merge_models.rs"
required-features = []

[[example]]
name = "train_from_yaml"
path = "examples/train_from_yaml.rs"
required-features = []

[[example]]
name = "distillation"
path = "examples/distillation.rs"
required-features = []

[[example]]
name = "training_loop"
path = "examples/training_loop.rs"
required-features = []

[[example]]
name = "model_io"
path = "examples/model_io.rs"
required-features = []

[[example]]
name = "train_from_yaml_example"
path = "examples/train_from_yaml_example.rs"
required-features = []
